After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 597100 - There is a misprint in the documentation of gtk_window_get_icon_name()
There is a misprint in the documentation of gtk_window_get_icon_name()
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: Other
2.18.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2009-10-02 11:48 UTC by tigran
Modified: 2010-01-11 09:35 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
This is a patch for the problem (126 bytes, application/octet-stream)
2009-10-02 11:48 UTC, tigran
  Details
Use const in the implementation of gtk_window_get_icon_name (330 bytes, patch)
2010-01-05 12:16 UTC, Christian Dywan
committed Details | Review

Description tigran 2009-10-02 11:48:45 UTC
Created attachment 144582 [details]
This is a patch for the problem

There is a misprint in the documentation of gtk_window_get_icon_name():

gchar* gtk_window_get_icon_name (GtkWindow *window);

But it should be written 

const gchar* gtk_window_get_icon_name (GtkWindow *window);


Also reported at http://linuxtesting.org/results/report?num=D0141
Comment 1 Christian Dywan 2010-01-05 12:14:25 UTC
I don't understand your "patch".

This would seem to be a bug in gtk-doc. Or maybe it's a good idea to use const in the function implementation, presumably G_CONST_RETURN is not really useful there anyway.
Comment 2 Christian Dywan 2010-01-05 12:16:43 UTC
Created attachment 150834 [details] [review]
Use const in the implementation of gtk_window_get_icon_name
Comment 3 Matthias Clasen 2010-01-07 06:23:57 UTC
Yeah, I think we generally use G_CONST_RETURN in headers, and const in the actual implementation.
Comment 4 Christian Dywan 2010-01-11 09:35:45 UTC
Pushed to master.