Use const gchar* in gtk_window_get_icon_name implementation

Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=597100